--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     https://accounts.google.com/gsi/client; frame-src
     https://accounts.google.com/gsi/; connect-src
     https://accounts.google.com/gsi/; />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
