--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
   
-  <title>React App</title>
+  <title>Wildan</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
